# pyRoDe

./: CMakeLists.txt  setup.py
RoDe_SpMM/: CMakeLists.txt  RoDeSpmm.cu  RoDeSpmm.h
eval/: CMakeLists.txt  eval_spmm_f32_inputN.cu  eval_spmm_mtx_reader.cu
python_bindings/: CMakeLists.txt  README.md  rode_spmm.cpp  simple_test.py  test_rodespmm.py  validate.py
utils/: CMakeLists.txt  basic_utils.h  common_utils.h  matrix_utils.cu  matrix_utils.h
